# mykqft-insure-backend

./: .gitignore  README.md  main.py  pyproject.toml
agents/: orchestrator_agent.py  vlm_specialist_agent.py
agents/llm_clients/: google_client.py  model_factory.py  openai_client.py  openrouter_client.py
agents/prompts/: agent_prompts.py
agents/tools/: azure_client.py  azure_processor.py  image_processor.py  pdf_processor.py
routes/: extraction_routes.py
services/: extraction_service.py
services/helpers/: vlm_helper.py
